# turtle-mimicry

./: README.md  lab2_controller.py  lab2_setup.launch
turtle_controller/: CMakeLists.txt  package.xml
turtle_controller/launch/: lab2_setup.launch
turtle_controller/scripts/: lab2_controller.py  targets_node.py
